--- a/mylist_page4.html
+++ b/mylist_page4.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <!--Scroll reveal CDN-->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <link rel="stylesheet" href="/css/st.css">
+    <link rel="stylesheet" href="/css/styles.css">
     
 
     <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
@@ -59,7 +59,7 @@
     <section class="hero" id="hero">
         <div class="container">
             <h2 class="sub-headline">
-                <span class="first-letter">M</span>ovie
+                <span class="first-letter">L</span>ist 4
             </h2>
             
         </div>
