homepage-remove button,removed

--- a/home.html
+++ b/home.html
@@ -140,6 +140,7 @@
             <div class="animate-top">
                 <h2 class="sub-headline">
                     <span class="first-letter">M</span>y List <br> <br>
+                    <!-- <button id="btn-remlist"  class="btn btn cta-btn" name="subject" type="submit" value="remove" onclick="removeData()">Clear list</button> -->
                 </h2>
             </div>
             <div class="animate-bottom">
@@ -242,7 +243,7 @@
 <script src="/js/me.js"></script>
 <script src="/js/test.js"></script>
 <script src="/js/index.js"></script>
-
+<!-- <script src="/js/mov.js"></script> -->
 
    
 
