--- a/fav_page.html
+++ b/fav_page.html
@@ -73,7 +73,7 @@
         <div class="global-headline">
             <div class="animate-top">
                 <h2 class="sub-headline">
-                    <span class="first-letter">L</span>iked List <br> <br>
+                    <!-- <span class="first-letter">L</span>iked List <br> <br> -->
                     <!-- <button id="btn-remlist"  class="btn cta-btn" name="subject" type="submit" value="remove" onclick="removeData()">Clear list</button> -->
                 </h2>
             </div>
